fixing some spacing and styles

--- a/styles/style-contact.css
+++ b/styles/style-contact.css
@@ -72,6 +72,11 @@ input[type="text"] {
   grid-row-end: span 3;
   grid-column-start: span 6;
   grid-column-end: span 6;
+  width: 100%;
+  height: 200px;
+  padding-left: 20px;
+  border: 1px none #000;
+  background-color: rgba(107, 112, 141, 0.1);
 }
 #submit-button {
   grid-row-start: span 1;
