--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@ body {
   font-size: 14px;
   line-height: 20px;
 }
+.nav-wrapper {
+  margin-top: 140px;
+}
 .container {
   display: flex;
   justify-content: space-between;
@@ -54,8 +57,19 @@ body {
   background-color: #072ac8;
   font-size: 17px;
   color: white;
+  border: 0;
+  line-height: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 0;
+}
+.button.primary-button:hover {
+  background-color: #292e47;
 }
 /*Preview*/
+.preview {
+  padding-top: 100px;
+}
 .preview-content {
   display: flex;
   justify-content: center;
@@ -121,6 +135,7 @@ body {
 }
 .grid-logos {
   display: grid;
+  width: 100%;
   grid-auto-columns: 1fr;
   grid-column-gap: 16px;
   grid-row-gap: 16px;
@@ -146,12 +161,16 @@ body {
   align-items: center;
 }
 /*Projects*/
+.projects {
+  margin-top: 200px;
+}
 .container-projects {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 .projects-header {
+  width: 100%;
   color: #292e47;
   font-size: 40px;
 }
@@ -235,6 +254,7 @@ body {
 /*Reviews*/
 .reviews {
   position: relative;
+  max-width: 1320px;
   height: 622px;
   margin-top: 200px;
   margin-right: auto;
@@ -356,6 +376,9 @@ body {
   background-repeat: no-repeat;
 }
 /*Services*/
+.services {
+  margin-top: 200px;
+}
 .services-container {
   flex-direction: column;
 }
@@ -512,6 +535,10 @@ body {
   border-radius: 0;
 }
 /*Footer*/
+.footer {
+  margin-top: 200px;
+  padding-bottom: 100px;
+}
 .footer-content {
   display: flex;
   width: 260px;
